--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon --watch src src/index.coffee"
   },
   "dependencies": {
+    "coffeescript": "^2.5.1",
     "discord.js": "^12.3.1",
     "dotenv": "^6.1.0",
     "forever": "^0.15.3"
