--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coffeescript": "^2.5.1",
     "discord.js": "^12.3.1",
     "dotenv": "^6.1.0",
-    "forever": "^0.15.3"
+    "forever": "^0.15.3",
+    "jszip": "^3.5.0"
   }
 }
